# pixi-site-packages

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/pixi-site-packages/: action.yml
.github/workflows/: build.yml  ci-build.yml  ci-release.yml  site-packages.yml
src/pixi_site_packages/: cli.py  core.py
tests/: test_import.py
