[project]
authors = [{name = "Christian Fobel", email = "christian@fobel.net"}]
dependencies = []
description = "Add a short description here"
name = "pixi-site-packages"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi_site_packages = { path = ".", editable = true }

[tool.pixi.tasks]
