[project]
name = "pixi-site-packages"
requires-python = ">= 3.11"
description = "A tool to extract PyPI requirements from pixi.lock"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Christian Fobel", email = "christian@fobel.net" }]
dependencies = ["pyyaml", "typer>=0.12.5,<0.13", "ruamel-yaml>=0.18.6,<0.19"]
dynamic = ["version"]

[project.scripts]
pixi-requirements = "pixi_site_packages.cli:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.hatch.build]
packages = ["src/pixi_site_packages"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pixi_site_packages/_version.py"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi_site_packages = { path = ".", editable = true }

[tool.pixi.tasks]
build = "hatchling build"
lint = "black src tests"
test = "pytest tests"

[tool.pixi.dependencies]
isort = ">=5.13.2,<6"
black = ">=24.10.0,<25"
jupyter = ">=1.1.1,<2"
pytest = ">=8.3.3,<9"
